# gw

./: .clang-format  .clang-tidy  .clangd  .cmake-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  clang-tidy-review.yml  cmake-multi-platform.yml  codeql.yml  linux.yml  macos.yml  pages.yml  windows.yml
cmake/: gw-config.cmake.in
docs/: CMakeLists.txt  named_type.md  strong_type.md
examples/: CMakeLists.txt  inplace_string_example.cpp  named_type.cpp  named_type_example.cpp  strong_type_example.cpp
include/gw/: concepts.hpp  crtp.hpp  inplace_string.hpp  named_type.hpp  strong_type.hpp
tests/: .clang-tidy  CMakeLists.txt  inplace_string_test.cpp  named_type_test.cpp  strong_type_test.cpp
